--- a/cs50/index/templates/base.html
+++ b/cs50/index/templates/base.html
@@ -39,7 +39,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-              <a class="nav-link" href="{% url 'homepage' %}">Home
+              <a class="nav-link" href="{% url 'covid-homepage' %}">Covid
             </a>
           </li>
           <li class="nav-item">
