--- a/cs50/index/templates/index.html
+++ b/cs50/index/templates/index.html
@@ -4,9 +4,18 @@
 
 {% if user.is_authenticated %}
 
-    Hello {{ user.username }}.<br />
+    <p>
+    Hello {{ user.username }}.
     Thanks for logging in.<br />
-    <a href="{% url 'my-logout' %}">Logout</a>
+    The following applications are available.
+    </p>
+    <ul>
+        <li>
+            <a href="{% url 'covid-homepage' %}">
+                Covid Dental Notes
+            </a>
+        </li>
+    </ul>
 
 {% else %}
 
