--- a/website/index/templates/base.html
+++ b/website/index/templates/base.html
@@ -37,11 +37,23 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
+          <ul class="navbar-nav ml-auto">
+
+<!-- change this block if an "app" requires it's own navigation. -->
+<!-- Homepage and login will remain -->
+{% block nav-items %}
           <li class="nav-item">
-              <a class="nav-link" href="{% url 'covid-homepage' %}">Covid
+              <a class="nav-link" href="{% url 'documentation-homepage' %}">
+                  Documentation
             </a>
           </li>
+          <li class="nav-item">
+              <a class="nav-link" href="{% url 'covid-homepage' %}">
+                  Covid
+            </a>
+          </li>
+{% endblock %}
+
           <li class="nav-item">
 {% if user.is_authenticated %}
                 <a class="nav-link" 
