--- a/website/index/templates/login.html
+++ b/website/index/templates/login.html
@@ -24,10 +24,19 @@
     <form action="{{ app_path }}" method="post" id="login-form">{% csrf_token %}
         <table class="table">
             <tr>
+                <td colspan="2">
+                    <strong>
+                    Please login using "Guest" for both username and password
+                    fields.
+                    </strong>
+                </td>
+            </tr>
+            <tr>
                 <th>
                     {{ form.username.label_tag }}
                 </th>
                 <td>
+                    Enter "Guest" here ->
                     {{ form.username.errors }}
                     {{ form.username }}
                 </td>
@@ -37,6 +46,7 @@
                 {{ form.password.label_tag }}
                 </th>
                 <td>
+                    Enter "Guest" here ->
                 {{ form.password.errors }}
                 {{ form.password }}
                 <input type="hidden" name="next" value="{{ next }}">
