--- a/website/index/templates/base.html
+++ b/website/index/templates/base.html
@@ -78,7 +78,10 @@
 
         {% endblock %}
 
+        {% block footer %}
+        {% endblock %}
   </div>
+
 
 <!-- Bootstrap core JavaScript -->
 <!-- JS, Popper.js, and jQuery -->
