--- a/website/index/templates/base.html
+++ b/website/index/templates/base.html
@@ -85,7 +85,7 @@
 
 <!-- Bootstrap core JavaScript -->
 <!-- JS, Popper.js, and jQuery -->
-<script src="http://code.jquery.com/jquery-3.5.1.min.js" 
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" 
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" 
         crossorigin="anonymous">
 </script>
